rename page.css 5

--- a/contact-host.html
+++ b/contact-host.html
@@ -209,7 +209,7 @@
                 </nav>
                 <div tabindex="-1" class="page-shell-mobile">
                   <div class="site-content__body">
-                    <div class="_1a5fl1v">
+                    <div class="confirm-pay">
                       <div class="box-border">
                         <div
                           style="
@@ -665,7 +665,7 @@
                 "
               >
                 <div class="site-content__body">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div class="box-border">
                       <div
                         style="
@@ -2133,7 +2133,7 @@
                                           </div>
                                         </div>
                                         <div class="_1s21a6e2">
-                                          <div class="_mubbvpq">
+                                          <div class="confirm-pay__content-right-container">
                                             <div
                                               style="
                                                 padding-top: 8px;
