--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -399,7 +399,7 @@
                                                           </div>
                                                         </div>
                                                       </div>
-                                                      <div class="_37qdzt">
+                                                      <div class="personal-info_list-item">
                                                         <div class="_r6zroz">
                                                           <span
                                                             class="main-content__details-cancel-button-wrapper"
@@ -1174,7 +1174,7 @@
                                                           </div>
                                                         </div>
                                                       </div>
-                                                      <div class="_37qdzt">
+                                                      <div class="personal-info_list-item">
                                                         <div class="_r6zroz">
                                                           <span
                                                             class="main-content__details-cancel-button-wrapper"
@@ -2295,7 +2295,7 @@
                     </div>
                   </div>
                   <div style="margin-top: 16px">
-                    <div class="_64pbdv">
+                    <div class="confirm-pay__service">
                       <div class="_clw8y6">
                         <iframe
                           class="relative"
