--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -1025,7 +1025,7 @@
                                   </div>
                                 </div>
                                 <div class="_1s21a6e2">
-                                  <div class="_mubbvpq">
+                                  <div class="confirm-pay__content-right-container">
                                     <div>
                                       <div class="display__flex dir dir-ltr">
                                         <div
