--- a/personal-info.html
+++ b/personal-info.html
@@ -283,7 +283,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="legalName-row-title"
                                           class="explore-filter-menu__list-title"
@@ -328,7 +328,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="legalName-row-title"
                                           class="explore-filter-menu__list-title"
@@ -447,7 +447,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="gender-row-title"
                                           class="explore-filter-menu__list-title"
@@ -492,7 +492,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="gender-row-title"
                                           class="explore-filter-menu__list-title"
@@ -604,7 +604,7 @@
                                     class="explore-filter-menu__list-padding d750e13 dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="personal-info-fields-birthdate-row-title"
                                           class="_onfnh81"
@@ -650,7 +650,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="email-row-title"
                                           class="explore-filter-menu__list-title"
@@ -695,7 +695,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="email-row-title"
                                           class="explore-filter-menu__list-title"
@@ -780,7 +780,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="phoneNumbers-row-title"
                                           class="explore-filter-menu__list-title"
@@ -808,7 +808,7 @@
                                               class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                             >
                                               <div class="flex">
-                                                <div class="_37qdzt">
+                                                <div class="personal-info_list-item">
                                                   <div
                                                     id="320255193-row-title"
                                                     class="explore-filter-menu__list-title"
@@ -867,7 +867,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="phoneNumbers-row-title"
                                           class="explore-filter-menu__list-title"
@@ -911,7 +911,7 @@
                                       class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                     >
                                       <div class="flex">
-                                        <div class="_37qdzt">
+                                        <div class="personal-info_list-item">
                                           <div
                                             id="320255193-row-title"
                                             class="explore-filter-menu__list-title"
@@ -962,7 +962,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="personal-info-fields-identity-row-title"
                                           class="explore-filter-menu__list-title"
@@ -1008,7 +1008,7 @@
                                       class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <div class="flex">
-                                        <div class="_37qdzt">
+                                        <div class="personal-info_list-item">
                                           <div
                                             id="address-row-title"
                                             class="explore-filter-menu__list-title"
@@ -1053,7 +1053,7 @@
                                       class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <div class="flex">
-                                        <div class="_37qdzt">
+                                        <div class="personal-info_list-item">
                                           <div
                                             id="address-row-title"
                                             class="explore-filter-menu__list-title"
@@ -2129,7 +2129,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="emergencyContacts-row-title"
                                           class="explore-filter-menu__list-title"
@@ -2174,7 +2174,7 @@
                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                   >
                                     <div class="flex">
-                                      <div class="_37qdzt">
+                                      <div class="personal-info_list-item">
                                         <div
                                           id="emergencyContacts-row-title"
                                           class="explore-filter-menu__list-title"
@@ -3627,7 +3627,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="legalName-row-title"
                                               class="explore-filter-menu__list-title"
@@ -3672,7 +3672,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="legalName-row-title"
                                               class="explore-filter-menu__list-title"
@@ -3796,7 +3796,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="gender-row-title"
                                               class="explore-filter-menu__list-title"
@@ -3841,7 +3841,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="gender-row-title"
                                               class="explore-filter-menu__list-title"
@@ -3959,7 +3959,7 @@
                                         class="explore-filter-menu__list-padding d750e13 dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="personal-info-fields-birthdate-row-title"
                                               class="_onfnh81"
@@ -4005,7 +4005,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="email-row-title"
                                               class="explore-filter-menu__list-title"
@@ -4050,7 +4050,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="email-row-title"
                                               class="explore-filter-menu__list-title"
@@ -4140,7 +4140,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="phoneNumbers-row-title"
                                               class="explore-filter-menu__list-title"
@@ -4168,7 +4168,7 @@
                                                   class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                                 >
                                                   <div class="flex">
-                                                    <div class="_37qdzt">
+                                                    <div class="personal-info_list-item">
                                                       <div
                                                         id="320255193-row-title"
                                                         class="explore-filter-menu__list-title"
@@ -4228,7 +4228,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="phoneNumbers-row-title"
                                               class="explore-filter-menu__list-title"
@@ -4272,7 +4272,7 @@
                                           class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_37qdzt">
+                                            <div class="personal-info_list-item">
                                               <div
                                                 id="320255193-row-title"
                                                 class="explore-filter-menu__list-title"
@@ -4329,7 +4329,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="personal-info-fields-identity-row-title"
                                               class="explore-filter-menu__list-title"
@@ -4375,7 +4375,7 @@
                                           class="explore-filter-menu__list-padding dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_37qdzt">
+                                            <div class="personal-info_list-item">
                                               <div
                                                 id="address-row-title"
                                                 class="explore-filter-menu__list-title"
@@ -4420,7 +4420,7 @@
                                           class="explore-filter-menu__list-padding dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_37qdzt">
+                                            <div class="personal-info_list-item">
                                               <div
                                                 id="address-row-title"
                                                 class="explore-filter-menu__list-title"
@@ -6043,7 +6043,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="emergencyContacts-row-title"
                                               class="explore-filter-menu__list-title"
@@ -6088,7 +6088,7 @@
                                         class="explore-filter-menu__list-padding dir dir-ltr"
                                       >
                                         <div class="flex">
-                                          <div class="_37qdzt">
+                                          <div class="personal-info_list-item">
                                             <div
                                               id="emergencyContacts-row-title"
                                               class="explore-filter-menu__list-title"
