--- a/products.html
+++ b/products.html
@@ -208,7 +208,7 @@
                   </div>
                 </nav>
                 <div tabindex="-1" class="page-shell-mobile hidden-md">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div class="box-border">
                       <div
                         style="
@@ -7833,7 +7833,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1a5fl1v hidden block-xl">
+                <div class="confirm-pay hidden block-xl">
                   <div class="box-border">
                     <div
                       style="
@@ -16519,7 +16519,7 @@
                                         </div>
                                       </div>
                                       <div class="_1s21a6e2">
-                                        <div class="_mubbvpq">
+                                        <div class="confirm-pay__content-right-container">
                                           <div style="padding-bottom: 48px">
                                             <div
                                               class="display__flex dir dir-ltr"
@@ -17493,11 +17493,11 @@
                                                                     <span
                                                                       class="_18x3iiu"
                                                                       ><div
-                                                                        class="_10d7v0r"
+                                                                        class="confirm-pay__price-wrapper"
                                                                       >
                                                                         <button
                                                                           type="button"
-                                                                          class="_101nvu7m"
+                                                                          class="confirm-pay__price-btn"
                                                                         >
                                                                           <div
                                                                             class="_m6lwl6"
@@ -17525,11 +17525,11 @@
                                                                     <span
                                                                       class="_18x3iiu"
                                                                       ><div
-                                                                        class="_10d7v0r"
+                                                                        class="confirm-pay__price-wrapper"
                                                                       >
                                                                         <button
                                                                           type="button"
-                                                                          class="_101nvu7m"
+                                                                          class="confirm-pay__price-btn"
                                                                         >
                                                                           <div
                                                                             class="_m6lwl6"
