--- a/submission/title.html
+++ b/submission/title.html
@@ -1112,7 +1112,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                                   </div>
                                 </div>
                                 <div class="_75y7ds">
-                                  <div class="_1nh4eon">
+                                  <div class="confirm-pay__trip-detail-rate">
                                     <svg
                                       viewBox="0 0 32 32"
                                       xmlns="http://www.w3.org/2000/svg"
