--- a/wishlist.html
+++ b/wishlist.html
@@ -550,8 +550,8 @@
                                                   <span class="text-highlight dir dir-ltr">
                                                     ₱2,431 per night</span>
                                                 </span>
-                                                <div class="_10d7v0r">
-                                                  <button type="button" class="_101nvu7m">
+                                                <div class="confirm-pay__price-wrapper">
+                                                  <button type="button" class="confirm-pay__price-btn">
                                                     <div class="_oeya9x">
                                                       <div class="_tt122m">
                                                         <span aria-hidden="true">
@@ -832,8 +832,8 @@
                                                   <span class="text-highlight dir dir-ltr">
                                                     ₱57,002 per night</span>
                                                 </span>
-                                                <div class="_10d7v0r">
-                                                  <button type="button" class="_101nvu7m">
+                                                <div class="confirm-pay__price-wrapper">
+                                                  <button type="button" class="confirm-pay__price-btn">
                                                     <div class="_oeya9x">
                                                       <div class="_tt122m">
                                                         <span aria-hidden="true">
@@ -2608,10 +2608,10 @@
                                                       >₱3,227 per night</span
                                                     ></span
                                                   >
-                                                  <div class="_10d7v0r">
+                                                  <div class="confirm-pay__price-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="_101nvu7m"
+                                                      class="confirm-pay__price-btn"
                                                     >
                                                       <div class="_oeya9x">
                                                         <div class="_tt122m">
@@ -3256,10 +3256,10 @@
                                                       >₱2,431 per night</span
                                                     ></span
                                                   >
-                                                  <div class="_10d7v0r">
+                                                  <div class="confirm-pay__price-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="_101nvu7m"
+                                                      class="confirm-pay__price-btn"
                                                     >
                                                       <div class="_oeya9x">
                                                         <div class="_tt122m">
@@ -4000,10 +4000,10 @@
                                                       >₱57,002 per night</span
                                                     ></span
                                                   >
-                                                  <div class="_10d7v0r">
+                                                  <div class="confirm-pay__price-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="_101nvu7m"
+                                                      class="confirm-pay__price-btn"
                                                     >
                                                       <div class="_oeya9x">
                                                         <div class="_tt122m">
