--- a/merchandising.html
+++ b/merchandising.html
@@ -215,7 +215,7 @@
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
                         <div class="site-content__body">
-                          <div class="_1a5fl1v">
+                          <div class="confirm-pay">
                             <div class="box-border">
                               <div
                                 style="
@@ -4185,7 +4185,7 @@
                 "
               >
                 <div class="site-content__body">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div class="box-border">
                       <div
                         style="
